<resources>
    <string name="app_name">Burrito_maitri</string>
    <string name="burrito_builder">Burrito Builder</string>
    <string name="burrito_name">Burrito Name</string>
    <string name="taco">taco</string>
    <string name="burrito">burrito</string>
    <string name="build">BUILD</string>
    <string name="veggie">VEGGIE</string>
    <string name="meat">MEAT</string>
    <string name="salsa">Salsa</string>
    <string name="cheese">Cheese</string>
    <string name="sour_cream">Sour Cream</string>
    <string name="guacamole">Guacamole</string>
    <string name="find_burrito">Find Burrito</string>
    <string name="browse">Go to the website</string>

    <string-array name="spinner">
        <item> The Hill </item>
        <item> 29th Street</item>
        <item> Pearl Street </item>
    </string-array>

</resources>
